force-app/main/default/objects/Yash_CodeScan_Training__c/Yash_CodeScan_Training__c.object-meta.xml
<CustomObject>
    <description>This is a custom object created for the purpose of the ARM training.</description>
    <label>Yash CodeScan Training</label>
    <nameField>
        <label>Yash  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yash CodeScan Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>