force-app/main/default/objects/Yash_CodeScan_Training__c/fields/Quality_Gate_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gate_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This describes the status of the Quality Gate</description>
    <label>Quality Gate Status</label>
    <type>Checkbox</type>
</CustomField>