force-app/main/default/objects/Yash_CodeScan_Training__c/fields/Quality_Gates__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gates__c</fullName>
    <description>This describes the information about the Quality Gates.</description>
    <label>Quality Gates</label>
    <length>30</length>
    <type>Text</type>
</CustomField>