force-app/main/default/objects/Yash_CodeScan_Training__c/fields/Quality_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Quality_Profiles__c</fullName>
    <label>Quality Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>SF Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>